--- a/index.html
+++ b/index.html
@@ -34,11 +34,30 @@
 			  </ul>
 			</div>
 		</section>
-		<div class="container">
-
-		</div>
+		<section class="container">
+			<div class="col-4">
+				<h2>Home</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ornare sem, ut ullamcorper libero. Integer vitae lorem in arcu condimentum ornare sit amet a tellus.</p>
+				<a class="btn" href="javascript:void(0)">Saiba mais</a>
+			</div>
+			<div class="col-4">
+				<h2>Sobre</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ornare sem, ut ullamcorper libero. Integer vitae lorem in arcu condimentum ornare sit amet a tellus.</p>
+				<a class="btn" href="sobre.html">Saiba mais</a>
+			</div>
+			<div class="col-4">
+				<h2>Notícias</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ornare sem, ut ullamcorper libero. Integer vitae lorem in arcu condimentum ornare sit amet a tellus.</p>
+				<a class="btn" href="noticias.html">Saiba mais</a>
+			</div>
+			<div class="col-4">
+				<h2>Contato</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ornare sem, ut ullamcorper libero. Integer vitae lorem in arcu condimentum ornare sit amet a tellus.</p>
+				<a class="btn" href="contato.html">Saiba mais</a>
+			</div>
+		</section>
 		<footer>
-			
+			<section class="container copyright">2017 - Desenvolvido por: Felipe Developer</section>
 		</footer>
 		<!-- scripts banner -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
