--- a/sobre.html
+++ b/sobre.html
@@ -26,11 +26,11 @@
 		<section class="banner">
 			
 		</section>
-		<div class="container">
+		<section class="container">
 
-		</div>
+		</section>
 		<footer>
-			
+			<section class="container copyright">2017 - Desenvolvido por: Felipe Developer</section>
 		</footer>
 		<script src="assets/main.js"></script>
 	</body>
