Estrutura do projeto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!-- style banner -->
 		<link rel="stylesheet" type="text/css" href="assets/banner/flexslider.css">
 	</head>
-	<body>
+	<body class="noticias">
 		<header class="header-site">
 			<nav id="menu-main">
 				<ul>
@@ -34,28 +34,30 @@
 			  </ul>
 			</div>
 		</section>
-		<section class="container">
-			<div class="col-4">
-				<h2>Home</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ornare sem, ut ullamcorper libero. Integer vitae lorem in arcu condimentum ornare sit amet a tellus.</p>
-				<a class="btn" href="javascript:void(0)">Saiba mais</a>
-			</div>
-			<div class="col-4">
-				<h2>Sobre</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ornare sem, ut ullamcorper libero. Integer vitae lorem in arcu condimentum ornare sit amet a tellus.</p>
-				<a class="btn" href="sobre.html">Saiba mais</a>
-			</div>
-			<div class="col-4">
-				<h2>Notícias</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ornare sem, ut ullamcorper libero. Integer vitae lorem in arcu condimentum ornare sit amet a tellus.</p>
-				<a class="btn" href="noticias.html">Saiba mais</a>
-			</div>
-			<div class="col-4">
-				<h2>Contato</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ornare sem, ut ullamcorper libero. Integer vitae lorem in arcu condimentum ornare sit amet a tellus.</p>
-				<a class="btn" href="contato.html">Saiba mais</a>
-			</div>
-		</section>
+		<main role="main" class="corpo  container">
+			<section>
+				<div class="col-4">
+					<h2>Home</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ornare sem, ut ullamcorper libero. Integer vitae lorem in arcu condimentum ornare sit amet a tellus.</p>
+					<a class="btn" href="javascript:void(0)">Saiba mais</a>
+				</div>
+				<div class="col-4">
+					<h2>Sobre</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ornare sem, ut ullamcorper libero. Integer vitae lorem in arcu condimentum ornare sit amet a tellus.</p>
+					<a class="btn" href="sobre.html">Saiba mais</a>
+				</div>
+				<div class="col-4">
+					<h2>Notícias</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ornare sem, ut ullamcorper libero. Integer vitae lorem in arcu condimentum ornare sit amet a tellus.</p>
+					<a class="btn" href="noticias.html">Saiba mais</a>
+				</div>
+				<div class="col-4">
+					<h2>Contato</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ornare sem, ut ullamcorper libero. Integer vitae lorem in arcu condimentum ornare sit amet a tellus.</p>
+					<a class="btn" href="contato.html">Saiba mais</a>
+				</div>
+			</section>
+		</main>
 		<footer>
 			<section class="container copyright">2017 - Desenvolvido por: Felipe Developer</section>
 		</footer>
