--- a/sobre.html
+++ b/sobre.html
@@ -2,10 +2,11 @@
 <html lang="pt-br" itemscope itemtype="http://schema.org/WebPage">
 	<head>
 		<meta charset="utf-8">
-		<title>Sobre</title>
+		<title>Sobre nós</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/sobre.css">
 	</head>
-	<body>
+	<body class="sobre">
 		<header class="header-site">
 			<nav id="menu-main">
 				<ul>
@@ -26,9 +27,17 @@
 		<section class="banner">
 			
 		</section>
-		<section class="container">
+		<main role="main" class="container corpo">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis massa id quam dapibus semper id non nunc. Suspendisse sodales hendrerit vehicula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla blandit gravida lorem et consequat. Suspendisse euismod, lectus eu iaculis ultrices, nisi leo posuere odio, sit amet convallis lorem ex sed sem. Vestibulum feugiat orci turpis, id sagittis eros gravida ac. Mauris tincidunt lorem luctus velit maximus, non fermentum nunc volutpat.</p>
 
-		</section>
+			<p>Donec dictum, odio vitae ultricies fringilla, metus libero eleifend sem, nec lobortis libero velit ut augue. Donec quis odio dolor. Nam ut venenatis orci, vel hendrerit dui. Proin rutrum orci at sapien pulvinar, ac porttitor arcu dictum. Quisque at mi varius, tincidunt purus sit amet, porta ante. Praesent augue lectus, fermentum sit amet urna eu, gravida ultrices risus. Nunc malesuada, ex sit amet malesuada ullamcorper, arcu erat vehicula libero, a euismod sem tortor vitae enim. Sed leo nulla, bibendum non neque in, finibus porta ligula. Nullam posuere eros vitae lorem vulputate hendrerit vitae vitae mauris.</p>
+
+			<iframe class="video-youtube float-right" width="560" height="315" src="https://www.youtube.com/embed/CvVvwh3BRq8" frameborder="0" allowfullscreen></iframe>
+
+			<p>Nullam elementum nibh vitae consequat mattis. Nulla vitae lacus in dui maximus rutrum in pulvinar ex. Vivamus ipsum enim, dapibus vel ullamcorper eget, convallis et lacus. Phasellus aliquam lacus ac lorem rutrum, volutpat dapibus ipsum cursus. Integer eu auctor nisl. Curabitur mattis pretium fringilla. Sed sit amet porta orci. Phasellus rutrum, odio ac sodales pharetra, arcu mauris lobortis justo, id blandit metus felis eget metus. Nam volutpat commodo metus. Aenean mollis nisl nec tellus vehicula, hendrerit semper metus efficitur. Integer efficitur, tortor vel blandit eleifend, orci quam consequat arcu, sit amet tempor ligula enim vitae urna.</p>
+
+			<p>Suspendisse ornare volutpat consequat. Nulla felis tellus, finibus eget tellus ac, gravida feugiat mi. Curabitur quis nisl odio. Suspendisse bibendum porta mi, ac accumsan dui venenatis vel. Vivamus commodo lorem eget arcu volutpat vehicula. Nulla at nibh efficitur, ultricies mi eu, vestibulum tellus. Cras arcu orci, dictum eleifend ullamcorper vel, pulvinar in nisi. Sed at magna in ipsum accumsan iaculis non a dui. Pellentesque eu viverra sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas eget malesuada ipsum, at aliquet est. </p>
+		</main>
 		<footer>
 			<section class="container copyright">2017 - Desenvolvido por: Felipe Developer</section>
 		</footer>
