--- a/contato.html
+++ b/contato.html
@@ -4,8 +4,9 @@
 		<meta charset="utf-8">
 		<title>Contato</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/contato.css">
 	</head>
-	<body>
+	<body class="contato">
 		<header class="header-site">
 			<nav id="menu-main">
 				<ul>
@@ -26,9 +27,16 @@
 		<section class="banner">
 			
 		</section>
-		<section class="container">
-
-		</section>
+		<main role="main" class="container corpo">
+		<form method="POST">
+			<input type="text" name="nome" required placeholder="Nome">
+			<input type="email" name="email" required placeholder="E-mail">
+			<input type="text" name="telefone" required placeholder="Telefone">
+			<input type="text" name="nome" required placeholder="assunto">
+			<textarea name="mensagem" required placeholder="mensagem"></textarea>
+			<button>Enviar</button>
+		</form>
+		</main>
 		<footer>
 			<section class="container copyright">2017 - Desenvolvido por: Felipe Developer</section>
 		</footer>
