--- a/noticias.html
+++ b/noticias.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Notícias</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/noticias.css">
 	</head>
 	<body>
 		<header class="header-site">
@@ -26,12 +27,108 @@
 		<section class="banner">
 			
 		</section>
-		<section class="container">
+		<main role="main" class="container corpo noticias">
+			<article class="col-3 color-sports">
+				<a href="#noticia1">
+					<figure>
+						<img src="assets/img/img-noticias.jpg" alt="img-noticias">
+					</figure>
+					<h2>Lorem Ipsum</h2>
+					<p class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor... </p>
+				</a>
+				<div id="noticia1" class="modal-content">
+					<header></header>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<footer></footer>
+				</div>
+			</article>
 
-		</section>
+			<article class="col-3 color-entertainment">
+				<a href="#noticia2">
+					<figure>
+						<img src="assets/img/img-noticias.jpg" alt="img-noticias">
+					</figure>
+					<h2>Lorem Ipsum</h2>
+					<p class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor... </p>
+				</a>
+				<div id="noticia2" class="modal-content">
+					<header></header>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<footer></footer>
+				</div>
+			</article>
+			<article class="col-3 color-journalism">
+				<a href="#noticia3">
+					<figure>
+						<img src="assets/img/img-noticias.jpg" alt="img-noticias">
+					</figure>
+					<h2>Lorem Ipsum</h2>
+					<p class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor... </p>
+				</a>
+				<div id="noticia3" class="modal-content">
+					<header></header>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<footer></footer>
+				</div>
+			</article>
+			<article class="col-3 color-sports">
+				<a href="#noticia4">
+					<figure>
+						<img src="assets/img/img-noticias.jpg" alt="img-noticias">
+					</figure>
+					<h2>Lorem Ipsum</h2>
+					<p class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor... </p>
+				</a>
+				<div id="noticia4" class="modal-content">
+					<header></header>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<footer></footer>
+				</div>
+			</article>
+			<article class="col-3 color-entertainment">
+				<a href="#noticia5">
+					<figure>
+						<img src="assets/img/img-noticias.jpg" alt="img-noticias">
+					</figure>
+					<h2>Lorem Ipsum</h2>
+					<p class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor... </p>
+				</a>
+				<div id="noticia5" class="modal-content">
+					<header></header>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<footer></footer>
+				</div>
+			</article>
+			<article class="col-3 color-journalism">
+				<a href="#noticia6">
+					<figure>
+						<img src="assets/img/img-noticias.jpg" alt="img-noticias">
+					</figure>
+					<h2>Lorem Ipsum</h2>
+					<p class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor... </p>
+				</a>
+				<div id="noticia6" class="modal-content">
+					<header></header>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula sodales justo, at mollis sem aliquam sed. Donec erat quam, aliquam sit amet tristique volutpat, bibendum nec ex. Pellentesque ut dui quis leo condimentum vestibulum et maximus erat. Donec eu risus sollicitudin, condimentum est id, tempor ligula. Integer non malesuada elit, eu egestas libero. Sed consequat tellus non magna maximus bibendum. Donec in dolor dolor.</p>
+					<footer></footer>
+				</div>
+			</article>
+		</main>
 		<footer>
 			<section class="container copyright">2017 - Desenvolvido por: Felipe Developer</section>
 		</footer>
-		<script src="assets/main.js"></script>
+		<script src="assets/js/main.js"></script>
 	</body>
 </html>
